<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/custom_login_bg"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:background="@drawable/custom_login_bg"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:id="@+id/linearLayout3">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fpEmail"
            android:layout_width="match_parent"
            android:textColorHint="@color/hint_color"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_fpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fpPhone"
            android:layout_width="match_parent"
            android:textColorHint="@color/hint_color"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_fpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_phone_reg" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_otp"
            android:layout_width="match_parent"
            android:textColorHint="@color/hint_color"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_guestName" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/btn_fpGetCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fp_getCode"
        android:textAllCaps="false"
        android:background="@drawable/primary_button_bg"
        android:textColor="@color/primary_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/retrieve_pswd_txt"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>